--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "mathjs": "^13.0.0",
-    "stats.js": "^0.17.0"
+    "stats.js": "^0.17.0",
+    "tweakpane": "^4.0.3"
   }
 }
